syntax = "proto3";

package todo;

option go_package = "todo";

import "google/protobuf/timestamp.proto";

service TodoService {
  rpc Create (CreateRequest) returns (CreateResponse) {
  }

  // Bulk version of CreateTodo
  rpc CreateBulk (CreateBulkRequest) returns (CreateBulkResponse) {
  }

  rpc Get (GetRequest) returns (GetResponse) {
  }

  rpc List (ListRequest) returns (ListResponse) {
  }

  rpc Delete (DeleteRequest) returns (DeleteResponse) {
  }

  rpc Update (UpdateRequest) returns (UpdateResponse) {
  }

  rpc UpdateBulk (UpdateBulkRequest) returns (UpdateBulkResponse) {
  }
}

message Todo {
  string id = 1;
  string title = 2;
  string description = 3;

  // @inject_tag: sql:",notnull,default:false"
  bool completed = 4;

  // @inject_tag: sql:"type:timestamptz,default:now()"
  google.protobuf.Timestamp created_at = 5;

  // @inject_tag: sql:"type:timestamptz"
  google.protobuf.Timestamp updated_at = 6;
}

message CreateRequest {
  Todo item = 1;
}

message CreateResponse {
  string id = 1;
}

message CreateBulkRequest {
  repeated Todo items = 1;
}

message CreateBulkResponse {
  repeated string ids = 1;
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  Todo item = 1;
}

message ListRequest {
  int32 limit = 1;
  bool not_completed = 2;
}

message ListResponse {
  repeated Todo items = 1;
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {}

message UpdateRequest {
  Todo item = 1;
}

message UpdateResponse {}

message UpdateBulkRequest {
  repeated Todo items = 1;
}

message UpdateBulkResponse {}